--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies" : {
     "async" : "0.9.0",
     "csvtojson" : "0.3.17",
-    "lodash" : "2.4.1"
+    "lodash" : "2.4.1",
+    "nconf" : "0.7.1"
   }
 }
