--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "async" : "0.9.0",
     "csvtojson" : "0.3.17",
     "lodash" : "2.4.1",
-    "nconf" : "0.7.1"
+    "nconf" : "0.7.1",
+    "random-js" : "1.0.4"
   }
 }
