Created an option to output results of an update to a file.

--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
   "data" : "data/",
   "scenario" : "current.json",
+  "file" : "",
   "html" : false,
   "max_stat" : {
     "base_strength" : "255",
