Add status abbreviations to config. Sanitize data some more, add templates for monster simulation. lodash bump.

--- a/config.json
+++ b/config.json
@@ -14,5 +14,15 @@
     "curr_attack" : "999",
     "defense" : "999",
     "curr_defense" : "999"
+  },
+  "status" : {
+    "chaos" : "CF",
+    "death" : "DE",
+    "fear" : "FR",
+    "numb" : "NU",
+    "poison" : "PO",
+    "sleep" : "SL",
+    "stopspell" : "ST",
+    "surround" : "SU"
   }
 }
