Add items and hearts won during battle to a character's inventory, and display messages if they need to choose what to discard.

--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
   "scenario" : "current",
   "file" : "",
   "html" : false,
+  "inventory_limit" : 6,
   "max_stat" : {
     "base_strength" : "255",
     "adj_strength" : "255",
