--- a/config.json
+++ b/config.json
@@ -3,6 +3,7 @@
   "scenario" : "current",
   "file" : "",
   "html" : false,
+  "attack_decay" : false,
   "experience_penalty" : 10,
   "inventory_limit" : 6,
   "max_stat" : {
