--- a/config.json
+++ b/config.json
@@ -20,9 +20,11 @@
   },
   "stat_bonus" : 0,
   "status" : {
+    "barrier" : "BA",
     "bounce" : "BO",
     "chaos" : "CF",
     "death" : "DE",
+    "bedragon" : "DR",
     "fear" : "FR",
     "ironize" : "IR",
     "numb" : "NU",
