Implement targeting logic for buff spells. Implement bikill attack bonus. Fix several syntax errors.

--- a/config.json
+++ b/config.json
@@ -22,6 +22,7 @@
   "status" : {
     "all": "ALL",
     "barrier" : "BA",
+    "bikill" : "BK",
     "bounce" : "BO",
     "chaos" : "CF",
     "death" : "DE",
