--- a/config.json
+++ b/config.json
@@ -19,6 +19,7 @@
     "defense" : "999",
     "curr_defense" : "999"
   },
+  "recruit_levels" : [1.75, 12, 25, 51],
   "stat_bonus" : 0,
   "status" : {
     "all": "ALL",
