--- a/config.json
+++ b/config.json
@@ -20,6 +20,7 @@
     "curr_defense" : "999"
   },
   "recruit_levels" : [1.75, 12, 25, 51],
+  "recruit_limit" : 8,
   "stat_bonus" : 0,
   "status" : {
     "all": "ALL",
