--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies" : {
     "async" : "0.9.0",
+    "csv-stringify" : "0.0.8",
     "csvtojson" : "0.3.17",
     "lodash" : "3.2.0",
     "nconf" : "0.7.1",
